--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "personalblog",
   "version": "1.0.0",
   "description": "This is 'BİLGİSAYAR MÜHENDİSLİĞİNDE GÜNCEL KONULAR' project.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
