--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "handlebars": "^4.7.7",
     "materialize-css": "^1.0.0-rc.2",
     "mongodb": "^4.5.0",
-    "nodemon": "^2.0.16",
-    "startbootstrap-clean-blog": "^6.0.8"
+    "nodemon": "^2.0.16"
   }
 }
