--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "express-handlebars": "^6.0.6",
     "method-override": "^3.0.0",
     "moment": "^2.29.3",
-    "mongoose": "^6.3.3"
-  },
-  "devDependencies": {
+    "mongoose": "^6.3.3",
     "nodemon": "^2.0.16"
   }
 }
